# duckdb-graphar

./: CMakeLists.txt
.github/workflows/: analyze-changes.yml  build-n-test.yml  publish.yml
config/: CMakeLists.txt  extension_config.cmake
include/utils/: global_log_manager.hpp
src/utils/: global_log_manager.cpp
